@@ -4,6 +4,7 @@ ChangeLog for RQL
 --
     * understand "C is NULL"
     * allow multiple annotation
+    * fix stinfo['possibletypes']
 	
 2008-01-25  --  0.15.4
     * better add_type_restriction methods
